<resources>
    <string name="app_name">Lab3SimpleCalculator</string>
    <string name="button_07">7</string>
    <string name="button_08">8</string>
    <string name="button_09">9</string>
    <string name="button_plus">+</string>
    <string name="button_04">4</string>
    <string name="button_05">5</string>
    <string name="button_06">6</string>
    <string name="button_multiplier">\\u00F7</string>
    <string name="button_multiply">\"\\u00F7\"</string>
    <string name="button_x" />
    <string name="button_0x">x</string>
    <string name="button_01">1</string>
    <string name="button_02">2</string>
    <string name="button_03">3</string>
    <string name="button_div">÷</string>
    <string name="button_c">C</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_sub">-</string>
    <string name="button_eq">=</string>
</resources>