<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultEdit"
            android:layout_width="fill_parent"
            android:layout_height="114dp" />

        <LinearLayout
            android:id="@+id/buttonRow01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button01"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn07Click"
                android:text="@string/button_07"
                android:textColor="#021327"
                android:textColorLink="#A8A5A5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button02"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn08Click"
                android:text="@string/button_08" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button03"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn09Click"
                android:text="@string/button_09" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btnAddClick"
                android:text="@string/button_plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button05"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn04Click"
                android:text="@string/button_04" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button06"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn05Click"
                android:text="@string/button_05" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button07"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn06Click"
                android:text="@string/button_06" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMult"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btnMultiplyClick"
                android:text="@string/button_0x"
                tools:text="x" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button09"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn01Click"
                android:text="@string/button_01" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn02Click"
                android:text="@string/button_02" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn03Click"
                android:text="@string/button_03" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btnDivideClick"
                android:text="@string/button_div" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCE"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btnClearClick"
                android:text="@string/button_c" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btn00Click"
                android:text="@string/button_0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btnDotClick"
                android:text="@string/button_dot" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSub"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#A8A5A5"
                android:onClick="btnMinusClick"
                android:text="@string/button_sub" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEQ"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#A8A5A5"
            android:onClick="btnResultClick"
            android:text="@string/button_eq" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>